@@ -5,90 +5,76 @@
       lang="en"
       metal:use-macro="context/main_template/macros/master"
       i18n:domain="minaraad">
-    <body>
-    <metal:block metal:fill-slot="content-core"
-                 tal:define="view nocall:context/@@attendees_view;
-                             current_path python:'/'.join(context.getPhysicalPath());
-                             agendaItems context/find_items_and_times;">
-      <br />
+  <body>
 
-      <tal:block
-          define="start python:context.getStart_time()-1;
-                  is_subscribed view/isRegistered;
-                  subscription_allowed python:context.getSubscriptionAllowed() and (start.isFuture());
-                  can_subscribe python:subscription_allowed and not is_subscribed;
-                  freshly_submitted request/submitted|nothing"
-          condition="python:(not freshly_submitted) and (can_subscribe or is_subscribed)">
-          <div class="hearing_subscribe">
-            <form tal:condition="is_subscribed"
-                  method="post"
-                  tal:attributes="action string:${context/absolute_url}/@@attendees_view">
-              <span>
-                U bent ingeschreven voor dit evenement.
-              </span>
-              <input class="context unsubscribe"
-                     type="submit"
-                     name="form.button.Submit"
-                     value="Unsubscribe"
-                     i18n:attributes="value label_unsubscribe;" />
+    <hidden metal:fill-slot="content-title">
+    </hidden>
 
-              <input type="hidden"
-                     name="form.submitted"
-                     value="unregister" />
-            </form>
+    <hidden metal:fill-slot="content-description">
+    </hidden>
 
-            <form tal:condition="can_subscribe"
-                  method="post"
-                  tal:attributes="action string:${context/absolute_url}/@@attendees_view">
-              <span>
-                Klik hier om u in te schrijven.
-              </span>
-              <input class="context subscribe"
-                     type="submit"
-                     name="form.button.Submit"
-                     value="Subscribe"
-                     i18n:attributes="value label_subscribe;" />
+  <metal:block fill-slot="content-core"
+      tal:define="view nocall:context/@@attendees_view;
+                  current_path python:'/'.join(context.getPhysicalPath());
+                  agendaItems context/find_items_and_times;
+                  toLocalizedTime nocall:context/@@plone/toLocalizedTime;">
+  <div class="content-wrapper">
+    <main role="main" id="main-container">
+      <div class="sec-event-detail">
+        <div class="container">
+          <div class="row">
 
-              <input type="hidden"
-                     name="form.submitted"
-                     value="register" />
-            </form>
-          </div>
-        </tal:block>
+            <div class=""> <!--article-event-detail-->
 
-       <img tal:condition="context/getFoto"
-            tal:attributes="src string:${context/absolute_url}/foto_foto"
-            alt=""
-            class="float-right" />
-        <div class="hearingsubheader"
-             tal:condition="context/getSubheader">
-            <span tal:replace="context/getSubheader" />
-        </div>
+              <article>
+                <metal:block use-macro="context/@@items/macros/listimageattachments"></metal:block>
+                <div class="body">
+  
+                  <section class="event-detail-lead">
+                    <header>
+                      <h3>
+                        <i class="fa fa-comments"></i>
+                        <span tal:replace="python:toLocalizedTime(context.getStart_time())">2 april 2016</span>
+                      </h3>
+                      <button type="button" class="btn btn-default" onClick="location.href='#inschrijven'">Inschrijven</button>
+                    </header>
+                    <h1 tal:content="context/Title">Groenboek Beleidsplan Ruimte Vlaanderen</h1>
+                    <p class="label">Evenement <span tal:content="context/getThemeTitle|nothing">Biodiversiteit</span></p>
+                    <p class="lead" tal:content="context/Description" />
+                  </section>
 
-         <div class="hearingsubheader2"
-              i18n:translate="Goal:"
-              tal:condition="context/getGoal">
-            Goal:
-         </div>
+                  <section class="event-detail">
+                    <h2>Samenvatting</h2>
+                    <tal:block metal:use-macro="context/mina_showdatetime/macros/datetime"> </tal:block>
+                    <dl class="dl-horizontal">
+                      <span class="hearingsubheader2" tal:condition="context/getLocation">
+                         <span i18n:translate="Location:"
+                               tal:omit-tag="">Location:</span>
+                      </span>
+                      <span tal:condition="context/getLocation"
+                          tal:content="context/getLocation"> London </span>
+                    </dl>
+                    <h2
+                         i18n:translate="Goal:"
+                         tal:condition="context/getGoal">
+                       Goal:
+                    </h2>
+                    <div tal:content="structure context/getGoal" />
 
-         <div tal:content="structure context/getGoal" />
+                    <p tal:content="structure context/getBody">
+                      Nihil hic munitissimus habendi senatus locus, nihil
+                      horum? Qui ipsorum lingua Celtae, nostra Galli
+                      appellantur. Tu quoque, Brute, fili mi, nihil timor
+                      populi, nihil! Quis aute iure reprehenderit in
+                      voluptate velit esse.
+                    </p>
+                    <!-- Contactperson -->
+                    <tal:block tal:define="obj nocall: context">
+                      <div metal:use-macro="context/contactperson_macros/macros/show_coord_authors"
+                           tal:omit-tag="" />
+                    </tal:block>
+                    <!-- end contactpersoon -->
 
-         <div class="hearingsubheader2"
-              tal:condition="context/getLocation">
-            <span i18n:translate="Location:"
-                  tal:omit-tag="">Location:</span>
-            <span class="normaltext"
-                  tal:content="context/getLocation" />
-         </div>
-
-         <!-- Date and Time -->
-         <div metal:use-macro="context/mina_showdatetime/macros/datetime" />
-        <!-- end Date and Time -->
-
-        <!-- Text -->
-        <div class="bodytext"
-             tal:condition="context/getBody"
-             tal:content="structure context/getBody" />
 
         <div class="visualClear"></div>
         <!-- End text -->
@@ -100,13 +86,12 @@
         </div>
         <!-- Hearing Files -->
 
-        <!-- Speakers -->
-        <div tal:condition ="agendaItems"
-             class="hearingsubheader2"
-             i18n:translate="label_agendaitems">Agenda items</div>
+        <!-- Speakers 
+        <h2 tal:condition ="agendaItems"
+             i18n:translate="label_agendaitems">Agenda items</h2>
 
         <table id="meeting_view"
-               tal:condition="agendaItems">
+               tal:condition="agendaItems" width="100%">
           <tbody>
             <tal:block tal:repeat="item agendaItems">
               <tr tal:define="obj python: item[0];
@@ -126,12 +111,6 @@
         </table>
         <!-- End speakers -->
 
-        <!-- Contactperson -->
-        <tal:block tal:define="obj nocall: context">
-          <div metal:use-macro="context/contactperson_macros/macros/show_coord_authors"
-               tal:omit-tag="" />
-        </tal:block>
-        <!-- end contactpersoon -->
 
         <tal:block tal:define="attendees view/groupedAttendees;
                                attended_members attendees/members;
@@ -177,7 +156,66 @@
           </form>
         </fieldset>
         </tal:block>
+        </section>
 
-        </metal:block>
-    </body>
+        <section class="event-form" name="inschrijven" id="inschrijven">
+          <header>
+            <h3>Inschrijven</h3>
+          </header>
+          <p>Excepteur sint obcaecat cupiditat non proident culpa. Ambitioni dedisse scripsisse iudicaretur. Non equidem invideo, miror magis posuere velit aliquet.</p>
+          <form>
+            <div class="form-group">
+              <label for="firstname">Voornaam</label>
+              <input type="text" class="form-control" id="firstname" placeholder="Voornaam">
+            </div>
+            <div class="form-group">
+              <label for="lastname">Achternaam</label>
+              <input type="text" class="form-control" id="lastname" placeholder="Achternaam">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+            </div>
+            <div class="form-group">
+              <label for="functie">Functie en/of organisatie (optioneel)</label>
+              <input type="text" class="form-control" id="functie" placeholder="Functie / organisatie">
+            </div>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox"> Gegevens onthouden
+              </label>
+            </div>
+            <button type="submit" class="btn btn-default">Inschrijven</button>
+          </form>
+        </section>
+        
+       </div>
+                    </article>
+
+                    <nav>
+                      <section class="prev-next">
+                        <metal:block use-macro="context/@@items/macros/nextprev" />
+                      </section>
+                      <section class="archive">
+                        <metal:block use-macro="context/@@items/macros/yeararchive" />
+
+                      </section>
+                      <section class="theme-list">
+                        <metal:block use-macro="context/@@items/macros/themelist" />
+                      </section>
+                    </nav>
+
+                  </div>
+
+                </div>
+              </div>
+            </div>
+
+           <!-- <tal:block metal:use-macro="context/@@items/macros/related_documents" />
+-->
+          </main>
+        </div>
+
+   </metal:block>
+   </body>
 </html>
